[package]
name = "gcloud-utils"
description = "Google Cloud Utilities."
version = "0.1.0"
authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[dependencies]
clap = { version = "3.1.15", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }