[package]
name = "gcloud-utils"
description = "Google Cloud Utilities."
version = "0.2.0"
authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
edition = "2021"
license-file = "LICENSE.txt"

[[bin]]
name = "gcu"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.15", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
console = "0.15.0"